<resources>
    <string name="app_name">TaskPRG</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="decline">Decline</string>
    <string name="user_terms">Terms of Use</string>
    <string name="last_updated">Last updated: July 27, 2022\n\nPlease read these terms and conditions carefully before using Our Service.</string>
    <string name="terms_of_use">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut lobortis elit. Morbi vitae nulla ac odio mollis luctus in id ante. Curabitur nec sapien in velit elementum sagittis. Etiam nibh justo, eleifend eget ipsum a, consequat interdum odio. Ut est magna, iaculis id ipsum ut, placerat fringilla augue. Nullam ut nisi maximus, auctor nunc id, ultrices lorem. Praesent consectetur, velit et dictum ultricies, libero lacus lobortis est, sit amet accumsan leo metus et ipsum. Fusce posuere metus quis augue condimentum molestie. Sed vulputate dolor ut dui aliquet, quis placerat lorem porttitor. Cras placerat dui eu turpis ultricies iaculis. Donec nec neque quis dolor interdum congue nec id quam. Praesent non accumsan libero, eget accumsan mauris. Cras lobortis dolor velit, ut dictum lectus sagittis vel. Aliquam eu placerat odio. Suspendisse et vehicula mauris. Sed interdum non sapien id ultrices. Fusce ornare ex vitae risus condimentum tincidunt. Nulla in massa tellus. Donec non pellentesque ipsum. Aenean iaculis eros id justo semper, nec mollis justo vestibulum. Pellentesque cursus tincidunt accumsan. Donec luctus sed tellus quis faucibus. Maecenas auctor efficitur mi ut scelerisque. Suspendisse et placerat sem, in sodales enim. Aliquam tincidunt rutrum ipsum, sed tempus nulla malesuada vel. Suspendisse pellentesque sollicitudin diam quis finibus. Nulla id blandit ligula, at feugiat est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ultrices, arcu consequat bibendum pretium, mauris ligula efficitur ipsum, eu semper urna sem vitae leo. Donec et elementum purus, eget auctor turpis. Nulla elementum tincidunt lobortis. Aenean ac purus orci. Nunc euismod vulputate ante sed condimentum. Etiam accumsan ex vitae dolor elementum, ac euismod mauris consequat. Praesent vel nibh non est tincidunt lacinia. Nullam ut urna laoreet, iaculis sem et, bibendum orci. Nam eu rutrum nulla. Integer in arcu id erat iaculis lacinia. In rutrum nunc risus, nec varius tellus malesuada eget. Nulla facilisi. In ac malesuada neque. Aenean lobortis consequat turpis eget sodales. Praesent at ante a orci interdum finibus vel in augue. Aenean sed eleifend tellus. Cras vel nibh magna. Nam mollis accumsan justo. Donec id euismod nisi. Fusce nec diam sit amet arcu varius rutrum ut vel libero. Duis a metus augue. Etiam sed mattis nisi. Suspendisse ultrices pulvinar lectus vel fermentum. Proin ac efficitur arcu. Praesent hendrerit aliquet augue at gravida. Proin vel consequat arcu. Vivamus ac ultrices tellus. Donec bibendum sapien massa, non tempus lorem tincidunt in. Aenean elementum, tortor at efficitur porttitor, erat ipsum scelerisque neque, id hendrerit lectus augue quis tortor. Pellentesque in sem sit amet enim cursus euismod. Donec ante libero, scelerisque vitae nulla a, facilisis luctus leo. Vestibulum rutrum leo in nisl viverra tempor. In sed arcu nec est commodo commodo.</string>
    <string name="connection_lost">Connection lost\nretry connecting..</string>

    <string name="facebook_app_id">1311545852924713</string>
</resources>